--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@types/node": "^22.14.1",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-router-dom": "^6.30.0",
